# Ekfv2.7

./: .replit  block_discord_py.py  check_available_channels.py  check_csv_content_simple.py  check_discord_commands.py  check_existing_server_config.py  check_killfeed_server_config.py  check_leaderboard_config.py  check_mongodb_structure.py  check_server_max_players.py  check_user_configured_channels.py  command_sync_cooldown.txt  complete_thread_pooling_test.py  comprehensive_command_diagnosis.py  comprehensive_event_verification.py  comprehensive_fix_implementation.py  configure_all_event_types.py  configure_channels.py  configure_channels_and_test_delivery.py  configure_killfeed_channels.py  configure_leaderboard_system.py  configure_server_credentials.py  configure_server_paths.py  debug_channel_configuration.py  debug_channel_structure.py  debug_killfeed_csv_content.py  debug_server_configuration.py  diagnose_online_command_failure.py  direct_database_verification.py  disable_cold_start_mode.py  discord_py_blocker.py  emergency_command_sync.py  enable_automated_leaderboard.py  examine_live_log_data.py  examine_log_content.py  final_command_execution_fix.py  final_comprehensive_verification.py  final_system_verification.py  find_max_players_in_logs.py  fix_automated_leaderboard.py  (+62 more)
attached_assets/: Pasted-2025-06-04-16-05-48-148-main-INFO-Found-16-asset-files-2025-06-04-16-05-48-148-mai-1749053481308.txt  Pasted-CONNECTION-FAILURE-REMEDIATION-Prompt-Type-Full-Stack-Repair-Deployment-Level-Replit-Agent-Opt-1749072250427_1749072250429.txt  (+1 more)
bot/cogs/: __init__.py  (+10 more)
(+151 files in other folders)
